# DATA_SCIENCE

Final_Project/: README.md  gui.py  main.py
Final_Project/data/: sales_data.xlsx  train.csv  user_data.csv
Final_Project/final_project/: pyproject.toml
Final_Project/notebooks/: EDA.ipynb
Final_Project/src/: data_preprocessing.py  evaluation.py  model.py  utils.py
workshops/: Workshop_1.ipynb  Workshop_2.ipynb  Workshop_3.ipynb  Workshop_4.ipynb
